[package]
name = "http-reqwest"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.4", path = "../../", features = ["stream"] }
wasi = "0.13.2"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
