[package]
name = "wasm"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2018"

# Config mostly pulled from: https://github.com/rustwasm/wasm-bindgen/blob/master/examples/fetch/Cargo.toml

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = {path = "../../"}
wasm-bindgen-futures = "0.4.1"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }

